# Test

./: .gitignore  CMakeLists.txt  Cuda.cmake.txt  Exercises.cpp  Exercises.h  LICENSE  Main.cpp  README.md  Test.code-workspace  Test.files  Test.includes  TestCuda.cu  TestCuda.h  TestEigen.cpp  TestEigen.h
Networks/: 02DatasetsAndLoaders.py
Networks/Old/: 00Quickstart.py  01Tensors.py
Networks/VAEs/HunterHeidenreich/: data.py  interpolate.py  source.txt  training.py  vae.py
public/: publicStuff.txt
